[package]
name = "asyncron"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3.31", features = ["thread-pool"] }
pin-project-lite = "0.2.16"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
smol = "2.0.2"
futures-lite = "2.6.0"
